--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
